# FeedAI

./: .gitignore  README.md  package-lock.json  package.json
apps/: demo.js
apps/cli/: .gitignore  README.md  bun.lockb  index.js  package-lock.json  package.json
apps/cli/adapter/: execCommands.js  sendCommand.js
apps/cli/config/: config.js
apps/cli/src/: cliConfig.js  feedAiClient.js  fileUtils.js  index.js
apps/cli_v1/: bun.lockb  cliConfig.js  demo.js  index.js  package-lock.json  package.json
apps/cli_v1/src/: cliConfig.js  feedAiClient.js  fileUtils.js  index.js
apps/engine/: .gitignore  Cargo.toml  Dockerfile  compose.yaml
apps/engine/src/: main.rs
apps/engine/src/actions/: filter_prompt.rs  generate_prompt.rs  mod.rs  response.rs
apps/engine/src/controllers/: generate.rs  mod.rs  not_found.rs  solve_issue.rs
apps/engine/src/repository/: constants.rs  gen_ai.rs  mod.rs
apps/engine/src/routes/: initial_routes.rs  mod.rs  v1.rs
apps/sdk/js/: bun.lockb  package.json  tsconfig.json
apps/sdk/js/src/: generate.ts  index.ts  solve.ts  types.ts
assets/: flow.drawio
sdk/js-feedai/: package.json  tsconfig.json
sdk/js-feedai/src/: constants.ts  generate.ts  index.ts
sdk/js-feedai/src/actions/: sendResponse.ts
