[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
openssl = "0.10.64"
reqwest = {version = "0.12.4", features = ["json"]}
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
